rs/sns_aggregator/src/types/NOTES

### ic_cdk version
The latest published version is 0.6.10 but the latest version that can be added successfully to Cargo.toml is "0.6.7".  Was there some problem publishing later versions?

### CandidType of empty enum structs

didc compiles this:
```
type FunctionType = variant {
  NativeNervousSystemFunction : record {};
  GenericNervousSystemFunction : GenericNervousSystemFunction;
};
```

to this:
```
pub enum FunctionType {
  NativeNervousSystemFunction{},
  GenericNervousSystemFunction(GenericNervousSystemFunction),
}
```
That is fine.  But then this fails to compile:
```
#[derive(CandidType, Deserialize, Serialize, Clone, Debug)]
pub enum FunctionType {
  NativeNervousSystemFunction{},
  GenericNervousSystemFunction(GenericNervousSystemFunction),
}
```
The compile error is:
```
+ cargo build --target wasm32-unknown-unknown --release -p sns_aggregator --color always
   Compiling sns_aggregator v0.1.2 (/home/max/dfn/sns-cache/branches/didc-types/src/sns_aggregator)
error[E0532]: expected unit struct, unit variant or constant, found struct variant `FunctionType::NativeNervousSystemFunction`
  --> src/sns_aggregator/src/types/ic_sns_governance2.rs:15:10
   |
15 | #[derive(CandidType, Deserialize, Serialize, Clone, Debug)]
   |          ^^^^^^^^^^ help: use struct pattern syntax instead: `FunctionType::NativeNervousSystemFunction {}`
16 | pub enum FunctionType {
17 |   NativeNervousSystemFunction{},
   |   ----------------------------- `FunctionType::NativeNervousSystemFunction` defined here
   |
   = note: this error originates in the derive macro `CandidType` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0532`.
error: could not compile `sns_aggregator` due to previous error
```

*Patch*
```
#[derive(CandidType, Deserialize, Serialize, Clone, Debug)]
pub enum FunctionType {
  NativeNervousSystemFunction, // Empty struct removed
  GenericNervousSystemFunction(GenericNervousSystemFunction),
}
```
or, better:
```
#[derive(CandidType, Deserialize, Serialize, Clone, Debug)]
pub struct EmptyRecord{}

#[derive(CandidType, Deserialize, Serialize, Clone, Debug)]
pub enum FunctionType {
  NativeNervousSystemFunction(EmptyRecord),
  GenericNervousSystemFunction(GenericNervousSystemFunction),
}
```
*TODO*
Push "EmptyRecord" into the upstream types.  At least, check what the upstream rust types look like and do this if it seems appropriate.


### icrc1 has no crate
There seems to be no crate for icrc1 on crates.io.  Doesn't sound right!
